--- a/wx-src/style/clippingTree.css
+++ b/wx-src/style/clippingTree.css
@@ -41,7 +41,7 @@
 
 ul.fancytree-container {
     font: caption;
-    font-size: 11px;
+    font-size: 12px;
     background-color: var(--color-clippings-tree-bkgd);
 }
 
